# InteractivePoissonEditing

./: .gitignore  .gitmodules  CMakeLists.txt  FileSelectionWidget.cpp  FileSelectionWidget.h  ImageFileSelector.cpp  ImageFileSelector.h  Panel.cpp  Panel.h  PoissonCloningInteractive.cpp  PoissonCloningWidget.cxx  PoissonCloningWidget.h  PoissonCloningWidget.ui  PoissonEditingInteractive.cpp  PoissonEditingWidget.cxx  PoissonEditingWidget.h  PoissonEditingWidget.ui  README.md
